manifests/production/ingress-production.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt-production
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - wordpress.pilotgapps.com
    secretName: production-letsencrypt
  rules:
  - host: wordpress.pilotgapps.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
